gnome-session: update to version 2.30.2, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71524 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-session/Portfile
+++ b/dports/gnome/gnome-session/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name                gnome-session
-version             2.26.2
+version             2.30.2
 set branch          [join [lrange [split ${version} .] 0 1] .]
 description         Session component for the GNOME 2 desktop
 long_description \
@@ -16,19 +16,16 @@ platforms           darwin
 homepage            http://www.gnome.org/
 master_sites        gnome:sources/${name}/${branch}/
 
-checksums           md5     2cc3ff808592d95c3b364d608e99dea4 \
-                    sha1    ba43d9c623e6e79635a09cfbd6ecfce40ccbab05 \
-                    rmd160  ff2c75cf5b8c3405ec5d2044510cf07eedede1d1
+checksums           md5     d93a2da931ac0b9c0d98f6b68a17a730 \
+                    sha1    1333d2c1ebc4b80a00ee6a2f2d34309cfd73c5ea \
+                    rmd160  6a269f4625af76bf6a74ad445aec9134827a726c
 
 depends_build       port:pkgconfig \
-                    port:intltool \
-                    port:p5-xml-parser
+                    port:intltool
  
 depends_lib         port:gconf \
-                    port:libglade2 \
                     port:startup-notification \
-                    port:policykit-gnome \
-                    port:xorg-xtrans \
+                    port:upower \
                     port:xorg-libXtst
 
 use_bzip2           yes
