gnome-menus: update to version 2.30.3, fix typo in description.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71525 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-menus/Portfile
+++ b/dports/gnome/gnome-menus/Portfile
@@ -4,12 +4,12 @@
 PortSystem      1.0
 
 name            gnome-menus
-version         2.30.2
+version         2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
 platforms       darwin
-description     Panel component for the GNOME 2 Desktop.
+description     Menu component for the GNOME 2 Desktop.
 
 long_description \
     ${description}
@@ -18,9 +18,9 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     5ca9935f50c939881689c48f59348426 \
-                sha1    edbc9b9fc4e86f5cc772011ea768ba9487625d67 \
-                rmd160  cbc2f5aaf529e385c835de84d6284803280494a9
+checksums       md5     7b577845d092db870a686cbeaf200dc0 \
+                sha1    b9812c022ce35163b89fa056508918de3a4910c4 \
+                rmd160  3afc1c25bb8e989343a8ea2ed66097705d6e8aa8
 
 patchfiles      patch-configure.diff
 
