naturaldocs: use "extract.mkdir yes" instead of reinventing it
git-svn-id: https://svn.macports.org/repository/macports/trunk@71529 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/naturaldocs/Portfile
+++ b/dports/textproc/naturaldocs/Portfile
@@ -20,7 +20,7 @@ homepage		http://www.naturaldocs.org/
 master_sites    sourceforge:${name}/Stable%20Releases/${version}
 distname        NaturalDocs-${version}
 use_zip         yes
-extract.dir     ${worksrcpath}
+extract.mkdir   yes
 
 checksums       md5     0c6fc5b424e672350c9ae510cabdeca5 \
                 sha1    e506e2759f7436467d4b8dcb7b37300401d07008 \
@@ -28,11 +28,6 @@ checksums       md5     0c6fc5b424e672350c9ae510cabdeca5 \
 
 depends_lib    bin:perl:perl5
 use_configure no
-
-pre-extract {
-    # The zip file extracts the files without a containing directory, so we create it here.
-    file mkdir ${worksrcpath}
-}
 
 post-patch {
     reinplace s|/usr/bin/perl|${prefix}/bin/perl|g ${worksrcpath}/NaturalDocs
