naturaldocs: use "supported_archs noarch" since this installs no architecture-specific files, and ensure a MacPorts perl is installed, since in post-patch we assume one is installed
git-svn-id: https://svn.macports.org/repository/macports/trunk@71530 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/naturaldocs/Portfile
+++ b/dports/textproc/naturaldocs/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name			naturaldocs
 version			1.5
-revision        1
+revision        2
 categories		textproc devel
 maintainers		landonf openmaintainer
 description		Documentation system for several programming languages
@@ -15,6 +15,7 @@ long_description \
     and builds high-quality HTML documentation from it.
 
 platforms		darwin
+supported_archs noarch
 
 homepage		http://www.naturaldocs.org/
 master_sites    sourceforge:${name}/Stable%20Releases/${version}
@@ -26,7 +27,8 @@ checksums       md5     0c6fc5b424e672350c9ae510cabdeca5 \
                 sha1    e506e2759f7436467d4b8dcb7b37300401d07008 \
                 rmd160  3c571a080090d02e90e84013c864608376a7fd7e
 
-depends_lib    bin:perl:perl5
+depends_lib     path:bin/perl:perl5
+
 use_configure no
 
 post-patch {
