naturaldocs: simplify master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@71531 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/naturaldocs/Portfile
+++ b/dports/textproc/naturaldocs/Portfile
@@ -18,7 +18,7 @@ platforms		darwin
 supported_archs noarch
 
 homepage		http://www.naturaldocs.org/
-master_sites    sourceforge:${name}/Stable%20Releases/${version}
+master_sites    sourceforge
 distname        NaturalDocs-${version}
 use_zip         yes
 extract.mkdir   yes
