--- a/dports/perl/p5-javascript-spidermonkey/Portfile
+++ b/dports/perl/p5-javascript-spidermonkey/Portfile
@@ -3,7 +3,7 @@ PortSystem		1.0
 PortGroup		perl5 1.0
 
 perl5.setup		JavaScript-SpiderMonkey 0.20
-revision		0
+revision		1
 maintainers		ricci openmaintainer
 categories-append	www
 description		Perl interface to the JavaScript Engine
@@ -18,7 +18,7 @@ long_description	\
 checksums           md5     06ce918cc0de15cc8208272ca9d782e0 \
                     sha1    51034ede37a85d6dce0e89a3af1bef313484f664
 
-depends_lib	port:spidermonkey
+depends_lib-append	port:spidermonkey
 
 platforms		darwin
 supported_archs	i386 ppc
