In the interest that all portfiles exemplify correct portfile writing techniques, remove slash before ${applications_dir} which is not needed because ${applications_dir} already begins with a slash
git-svn-id: https://svn.macports.org/repository/macports/trunk@71534 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/ManOpen/Portfile
+++ b/dports/aqua/ManOpen/Portfile
@@ -30,7 +30,7 @@ use_parallel_build  no
 destroot     {
     xinstall -d -m 755 ${destroot}${applications_dir}
     file copy ${build.dir}/${name}.app                 \
-        ${destroot}/${applications_dir}/${name}.app
+        ${destroot}${applications_dir}/${name}.app
     file copy ${build.dir}/openman ${destroot}${prefix}/bin
     file copy ${build.dir}/openman.tproj/openman.1            \
         ${destroot}${prefix}/share/man/man1
