--- a/dports/devel/GitX/Portfile
+++ b/dports/devel/GitX/Portfile
@@ -46,7 +46,7 @@ configure {
 
 post-destroot {
     file mkdir  ${destroot}${prefix}/bin
-    file rename ${destroot}/${applications_dir}/gitx ${destroot}${prefix}/bin/gitx
+    file rename ${destroot}${applications_dir}/gitx ${destroot}${prefix}/bin/gitx
 }
 
 livecheck.url       http://gitx.frim.nl/release_history.html
