--- a/dports/java/android/Portfile
+++ b/dports/java/android/Portfile
@@ -78,7 +78,7 @@ destroot {
 
 platform macosx {
     post-destroot {
-	xinstall -m 755 -d ${destroot}/${applications_dir}/Developer
+	xinstall -m 755 -d ${destroot}${applications_dir}/Developer
 
 	system "touch ${destroot}${applications_dir}/Developer/.localized"
 
