--- a/dports/lang/eiffelstudio65/Portfile
+++ b/dports/lang/eiffelstudio65/Portfile
@@ -67,7 +67,7 @@ build             {
 
 destroot          {
                     xinstall -m 755 -d ${destroot}${applications_dir}
-                    file copy ${worksrcpath}/Eiffel${branch} ${destroot}/${applications_dir}/
+                    file copy ${worksrcpath}/Eiffel${branch} ${destroot}${applications_dir}/
 
                     # Run ranlib on the libraries
                     system "ranlib ${destroot}${applications_dir}/Eiffel${branch}/studio/spec/$env(ISE_PLATFORM)/lib/*.a"
