--- a/dports/news/leafnode/Portfile
+++ b/dports/news/leafnode/Portfile
@@ -52,7 +52,7 @@ post-destroot {
 	xinstall					-m 755 -d ${destroot}${prefix}/var
 	xinstall					-m 755 -d ${destroot}${prefix}/var/spool
 	xinstall -o _news -g _news	-m 755 -d ${destroot}${prefix}/var/spool/news
-	xinstall					-m 755 -d ${destroot}/${applications_dir}/Utilities
+	xinstall					-m 755 -d ${destroot}${applications_dir}/Utilities
 
 	xinstall -o _news -g _news -m 640											\
 		-W ${filespath}															\
@@ -81,15 +81,15 @@ post-destroot {
 	xinstall -m 755																\
 		-W ${filespath}															\
 		Restart_Fetchnews.command.in											\
-		${destroot}/${applications_dir}/Utilities/Restart_Fetchnews.command
+		${destroot}${applications_dir}/Utilities/Restart_Fetchnews.command
 	xinstall -m 755																\
 		-W ${filespath}															\
 		Restart_Leafnode.command.in												\
-		${destroot}/${applications_dir}/Utilities/Restart_Leafnode.command
+		${destroot}${applications_dir}/Utilities/Restart_Leafnode.command
 	xinstall -m 755																\
 		-W ${filespath}															\
 		Restart_Texpire.command.in												\
-		${destroot}/${applications_dir}/Utilities/Restart_Texpire.command
+		${destroot}${applications_dir}/Utilities/Restart_Texpire.command
 
 	reinplace																	\
 		s|@PREFIX@|${prefix}|g													\
@@ -98,9 +98,9 @@ post-destroot {
 		${destroot}${prefix}${launch_dir}/org.macports.texpire.plist
 	reinplace																	\
 		s|@PREFIX@|${prefix}|g													\
-		${destroot}/${applications_dir}/Utilities/Restart_Fetchnews.command		\
-		${destroot}/${applications_dir}/Utilities/Restart_Leafnode.command		\
-		${destroot}/${applications_dir}/Utilities/Restart_Texpire.command
+		${destroot}${applications_dir}/Utilities/Restart_Fetchnews.command		\
+		${destroot}${applications_dir}/Utilities/Restart_Leafnode.command		\
+		${destroot}${applications_dir}/Utilities/Restart_Texpire.command
 }
 
 ############################################################ {{{1 ###########
