--- a/dports/java/derby-server/Portfile
+++ b/dports/java/derby-server/Portfile
@@ -48,7 +48,7 @@ pre-destroot {
 
 destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/java
-    xinstall -m 755 -d ${destroot}/${applications_dir}/Utilities
+    xinstall -m 755 -d ${destroot}${applications_dir}/Utilities
 
     file copy ${worksrcpath} ${destroot}${prefix}/share/java/${packagename}
 
@@ -56,7 +56,7 @@ destroot {
 	xinstall -m 755							\
 	   -W ${filespath}						\
 	    ${script}.command						\
-	    ${destroot}/${applications_dir}/Utilities/${script}.command
+	    ${destroot}${applications_dir}/Utilities/${script}.command
 	reinplace s|@PREFIX@|${prefix}|g				\
 	    ${destroot}${applications_dir}/Utilities/${script}.command
     }
