--- a/dports/java/glassfishv3/Portfile
+++ b/dports/java/glassfishv3/Portfile
@@ -34,7 +34,7 @@ destroot {
 	}
 
 	xinstall -m 755 -d ${destroot}${prefix}/share/java
-	xinstall -m 755 -d ${destroot}/${applications_dir}/Utilities
+	xinstall -m 755 -d ${destroot}${applications_dir}/Utilities
 
     file copy ${worksrcpath} ${destroot}${prefix}/share/java/${name}
 
@@ -42,7 +42,7 @@ destroot {
 		xinstall -m 755													\
 			-W ${filespath}												\
 			${script}.command											\
-			${destroot}/${applications_dir}/Utilities/${script}.command
+			${destroot}${applications_dir}/Utilities/${script}.command
 		reinplace s|@PREFIX@|${prefix}|g								\
 			${destroot}${applications_dir}/Utilities/${script}.command
 	}
