Better way to handle +universal variant. Added in configure feature for specifying 10.4 SDK.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71538 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca/Portfile
+++ b/dports/devel/qca/Portfile
@@ -28,10 +28,12 @@ checksums            md5     27ebdfbd9869d90dae078a6decd029f4 \
 depends_build        port:pkgconfig
 depends_lib          port:qt4-mac
 
-# patch to correct pkgconfig file for framework install, if selected.
-# and allow for 'debug' and 'framework' options at the same time.
-# This change is needed to allow for +debug [+framework] -- disallow
-# just debug framework via no variants for it.
+# (1) correct pkgconfig file for framework install, if selected.
+# (2) allow for 'debug' and 'framework' options at the same time.
+#     This change is needed to allow for +debug [+framework] --
+#     disallow just debug framework via no variants for it.
+# (3) allow simple replacement for universal arch arguments, if that
+#     variant is requested.
 patchfiles           patch-configure.diff
 
 set qt_dir           ${prefix}/libexec/qt4-mac
@@ -97,18 +99,45 @@ variant examples description \
     }
 }
 
-platform darwin 10 {
-    post-patch {
-        # have configure use X86_64, not PPC,
-        # as the other half of "universal"
-        reinplace "s@ppc@x86_64@g" ${worksrcpath}/configure
+post-patch {
+    if {[variant_exists universal] && [variant_isset universal]} {
+        # set universal arch types, depending on what the user has specified
+        array set macports_to_qt_build_arch {
+            ppc     ppc
+            i386    x86
+            ppc64   ppc64
+            x86_64  x86_64
+        }
+        set qca_arch_types ""
+        set qca_qt_config_str ""
+        foreach arch ${universal_archs} {
+            set this_arch_in_qt $macports_to_qt_build_arch($arch)
+            lappend qca_arch_types ${this_arch_in_qt}
+            lappend qca_qt_config_strs "contains(QT_CONFIG,${this_arch_in_qt})"
+        }
+        set qca_arch_types_str [join ${qca_arch_types} " "]
+        set qca_qt_config_str [join ${qca_qt_config_strs} ":"]
+        reinplace "s/@UNIVERSAL_CONTAINS@/${qca_qt_config_str}/g" \
+            ${worksrcpath}/configure
+        reinplace "s/@UNIVERSAL_TYPES@/${qca_arch_types_str}/g" \
+            ${worksrcpath}/configure
     }
 }
 
+platform darwin 8 {
+    # might not be necessary
+    if {[variant_exists universal] && [variant_isset universal]} {
+        configure.args-append --mac-sdk=${developer_dir}/SDKs/MacOSX10.4u.sdk
+    }
+}
+
+# QCA's configure does not handle this flag,
+# but does not generate an error either.
+configure.universal_args-delete --disable-dependency-tracking
+configure.args-delete  --disable-dependency-tracking
+
 variant universal {
-    # remove from universal configure flags
-    configure.universal_args-delete --disable-dependency-tracking
-    # and add in the one used by qmake
+    # Add the universal flag understood by qmake
     configure.universal_args-append --universal
 }
 
