--- a/dports/devel/ccache/Portfile
+++ b/dports/devel/ccache/Portfile
@@ -52,6 +52,4 @@ post-destroot {
     eval xinstall -m 0644 [glob ${worksrcpath}/web/*.html] ${destroot}${docdir}/html
 }
 
-post-activate {
-    ui_msg "The ccache symlinks are installed in ${symlinks_dir}"
-}
+notes "The ccache symlinks are installed in ${symlinks_dir}"
