asterisk: update to 1.6.2.10 (#25442)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71540 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/asterisk/Portfile
+++ b/dports/net/asterisk/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                asterisk
-version             1.6.1.12
-revision        1
+version             1.6.2.10
 categories          net
 platforms           darwin
 maintainers         viagente.ca:marc.blanchet mr_bond openmaintainer
@@ -24,10 +23,10 @@ depends_lib         port:ncurses \
                     port:bison \
                     port:curl \
                     port:wget
-                    
-checksums           md5     d6bc1448b8fa274a2acaef1b15f4d485 \
-                    sha1    b7c9cdfd6b7401be2eabac537f6f6cebee10b48c \
-                    rmd160  fa2440974605ea3098cd99d697bab2bea534b827
+
+checksums           md5     50412a90942ae7306fb8dcc31a05c2ce \
+                    sha1    60877704de3b7ac6213eb4e0dac2c68a06a40658 \
+                    rmd160  c8aaf7444364ceab9a97030a3179fb2d6f0fb791
 
 startupitem.create      yes
 startupitem.netchange   yes
@@ -35,17 +34,14 @@ startupitem.executable  ${prefix}/sbin/asterisk -d
 
 universal_variant   no
 
-configure.args      --without-h323 --without-zaptel
-                    if {${build_arch} == "x86_64"} {
-                        configure.args-append   --host=x86_64-darwin
-                    }
+configure.args      --without-h323
 
 build.env           ASTCFLAGS=-I${prefix}/include \
                     ASTLDFLAGS=-L${prefix}/lib
-                    
-variant jabber description {Enable Jabber support} { 
-    depends_lib-append port:iksemel 
-} 
+
+variant jabber description {Enable Jabber support} {
+    depends_lib-append port:iksemel
+}
 
 post-destroot {
     system "rsync -a $worksrcpath/configs/*.sample ${destroot}${prefix}/etc/asterisk"
