--- a/dports/sysutils/tree/Portfile
+++ b/dports/sysutils/tree/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                tree
-version             1.5.2.2
+version             1.5.3
 categories          sysutils
 platforms           darwin
 maintainers         nomaintainer
@@ -18,15 +18,19 @@ homepage            http://mama.indstate.edu/users/ice/tree/
 master_sites        freebsd \
                     ftp://mama.indstate.edu/linux/tree/ \
                     ftp://mama.indstate.edu/linux/tree/old/
-checksums           md5 a7731a898e2c0d7e422a57a84ffbb06c \
-                    sha1 ebc99e61fb0e5d118b7f126072e7ec90166667d5 \
-                    rmd160 4cafe08178b76e479ef8f91ace4d26dd173c787c
+checksums           md5     c07ce9065667a23f27aca4de8ecccb10 \
+                    sha1    329e05e500754109ff1f648c14924d8cac42c6ea \
+                    rmd160  72ca2be3ea05bd18819973ad0dfc60a3b9247d90
 extract.suffix      .tgz
 
 patchfiles          patch-caseinsensitive.diff \
                     patch-Makefile.diff
 
 use_configure       no
+
+build.args          CC=${configure.cc} \
+                    CFLAGS="${configure.cflags}" \
+                    LDFLAGS="${configure.ldflags}"
 
 destroot.args       BINDIR=${destroot}${prefix}/bin \
                     MANDIR=${destroot}${prefix}/share/man/man1
