cedet-devel: update to 1.0pre7 (#25571)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71544 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/cedet-devel/Portfile
+++ b/dports/editors/cedet-devel/Portfile
@@ -5,8 +5,7 @@ PortSystem      1.0
 
 name            cedet-devel
 set my_name     cedet
-version         1.0pre6
-revision        1
+version         1.0pre7
 categories      editors
 platforms       darwin
 maintainers     nomaintainer
@@ -22,13 +21,11 @@ homepage        http://cedet.sourceforge.net/
 master_sites    sourceforge:$my_name
 distname        $my_name-$version
 
-checksums       md5     775c74493b146bd64352969c1590f96b \
-                sha1    e8978695e0a552e1d9484721172ce0251658900c \
-                rmd160  9c82cdb47d7141703825cdc976dd47984b5b4750
+checksums       md5     e9862e293d27ae03c74f510a2a40c1eb \
+                sha1    b48bfe50df43b6941e9ffd40256c10d58b14b832 \
+                rmd160  4f90db2ad9c63a3d8ff6ac9e3a1c83f99fb2b777
 
-depends_build   port:emacs
-
-depends_run     port:emacs
+depends_lib     port:emacs
 
 use_configure   no
 
@@ -74,5 +71,3 @@ destroot {
         destroot_package $p
     }
 }
-
-universal_variant   no
