ecb: update to 2.40; fixes #23975
git-svn-id: https://svn.macports.org/repository/macports/trunk@71545 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/ecb/Portfile
+++ b/dports/editors/ecb/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            ecb
-version         2.32
-revision        1
+version         2.40
 categories      editors
 platforms       darwin
 maintainers     nomaintainer
@@ -20,19 +19,19 @@ long_description \
 homepage        http://ecb.sourceforge.net/
 master_sites    sourceforge
 
-checksums       md5 565b245f9e49e941214db256cf2b8e23 \
-                sha1 f396adbe2079ee8a314912f9920d4e4c363bc7e3 \
-                rmd160 e5361142bfc211a6389400536c034a32ae1998ec
+checksums       md5 7f1df8e1c15b8d95641b40abbd706cd7 \
+                sha1 9d790b10572711cbcd032b306dfa2245950835f0 \
+                rmd160 f0ccbbb4f8303f2557ce32c93a65de12226116b9
 
-depends_build   port:emacs port:cedet-devel
-depends_run     port:emacs port:cedet-devel
+depends_lib     port:emacs port:cedet-devel
 
 use_configure   no
 
-build.args      CEDET=
+set lispdir     ${prefix}/share/emacs/site-lisp
+
+build.args      CEDET=${lispdir}
 
 destroot {
-    set lispdir ${prefix}/share/emacs/site-lisp
     eval xinstall -d ${destroot}${lispdir}
     eval xinstall -m 0644 [glob -directory ${worksrcpath} *.el *.elc] \
         ${destroot}${lispdir}
@@ -42,7 +41,4 @@ destroot {
     }
 }
 
-universal_variant   no
-
 livecheck.regex "<title>${name} ${name}-(.*) released.*</title>"
-
