hdfeos: update to 2.17v1.00. fixes #26485
git-svn-id: https://svn.macports.org/repository/macports/trunk@71546 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/hdfeos/Portfile
+++ b/dports/science/hdfeos/Portfile
@@ -4,7 +4,7 @@
 PortSystem				    1.0
 
 name					    hdfeos
-version                     2.16v1.00
+version                     2.17v1.00
 categories				    science
 maintainers				    takeshi
 description				    HDF-EOS library built on HDF4
@@ -13,15 +13,16 @@ long_description \
     data structures, namely Grid, Point, and Swath.
 homepage                    http://hdfeos.org/
 platforms                   darwin
-master_sites                ftp://edhs1.gsfc.nasa.gov/edhs/${name}/latest_release/
+master_sites                ftp://edhs1.gsfc.nasa.gov/edhs/${name}/latest_release/ \
+                            ftp://edhs1.gsfc.nasa.gov/edhs/${name}/previous_release/
 depends_lib				    port:hdf4
 distname                    HDF-EOS${version}
 worksrcdir                  ${name}
 extract.suffix              .tar.Z
 fetch.use_epsv              no
-checksums                   md5     784bc6f47a0089f34a845b3ef1664fee \
-                            sha1    466892fa12b32fc4033362f4234d5f2e4a5754e9 \
-                            rmd160  ca7b7b5a5ef397c5f8fd80e7e247df60b789e69d
+checksums           md5     425663791aeb9355c6fb9f6650aff0e8 \
+                    sha1    4b24fa23eeefa94b2703180294942d615b3ed73e \
+                    rmd160  15d9c8d9d01768205c8bc42f652548d7b84f0018
 configure.args              --with-jpeg=${prefix}/lib/jpeg6b --with-hdf4=${prefix} --with-zlib=${prefix} \
     --disable-dependency-tracking
 set jpegdir ${prefix}/lib/jpeg6b
