Better way to handle debug and universal variants.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71547 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/qwtplot3d/Portfile
+++ b/dports/graphics/qwtplot3d/Portfile
@@ -61,29 +61,33 @@ if {![variant_isset qwt] && ![variant_isset qwt52]} {
 
 variant debug description "Build release and debug versions" {}
 
-if {![variant_isset debug]} {
-    post-patch {
+post-patch {
+    # tweak the qwtplot3d.pro file.  add key for later reinplace for
+    # archs, no matter the status of the debug or universal variants.
+    reinplace "/CONFIG/s/debug/debug @UNIVERSAL_TYPES@/g" \
+        ${worksrcpath}/qwtplot3d.pro
+    if {![variant_isset debug]} {
         # remove 'debug' from the qwtplot3d.pro file
         reinplace "s@debug@@g" ${worksrcpath}/qwtplot3d.pro
     }
-}
-
-platform darwin 9 {
-    post-patch {
-        if {[variant_isset universal]} {
-            # add both architectures to CONFIG
-            reinplace "s@\\(CONFIG.*qt\\)@\\1 x86 ppc@" ${worksrcpath}/qwtplot3d.pro
+    set qca_arch_types_str ""
+    if {[variant_exists universal] && [variant_isset universal]} {
+        # set universal arch types, depending on what the
+        # user has specified
+        array set macports_to_qt_build_arch {
+            ppc     ppc
+            i386    x86
+            ppc64   ppc64
+            x86_64  x86_64
         }
-    }
-}
-
-platform darwin 10 {
-    post-patch {
-        if {[variant_isset universal]} {
-            # add both architectures to CONFIG
-            reinplace "s@\\(CONFIG.*qt\\)@\\1 x86 x86_64@" ${worksrcpath}/qwtplot3d.pro
+        set qca_arch_types ""
+        foreach arch ${universal_archs} {
+            lappend qca_arch_types $macports_to_qt_build_arch($arch)
         }
+        set qca_arch_types_str [join ${qca_arch_types} " "]
     }
+    reinplace "s/@UNIVERSAL_TYPES@/${qca_arch_types_str}/g" \
+        ${worksrcpath}/qwtplot3d.pro
 }
 
 variant universal {
