py25-igraph: update to 0.5.4
git-svn-id: https://svn.macports.org/repository/macports/trunk@71548 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-igraph/Portfile
+++ b/dports/python/py25-igraph/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python25 1.0
 
 name                py25-igraph
-version             0.5.3
+version             0.5.4
 categories-append   math
 maintainers         snc openmaintainer
 description         Python interface to the igraph library
@@ -18,9 +18,8 @@ master_sites        http://pypi.python.org/packages/source/p/python-igraph/
 
 distname            python-igraph-${version}
 
-checksums           md5     9e9b5d71faf7bc7723116842f7bd7ce5 \
-                    sha1    949583ef7ce5f71017aa109e1b015d66e2db2ae4 \
-                    rmd160  1e414c53b659bd613de4c5ff1505d376cc18bb16
+checksums           md5     665e40032c7ea95d1279bd49afd8d213 \
+                    sha1    2d54398279b8fb74ecaf204fc6fba12115335e08
 
 platforms           darwin
 
