wine-crossover-games: update to 9.1.0, based on wine 1.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@71551 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/wine-crossover-games/Portfile
+++ b/dports/x11/wine-crossover-games/Portfile
@@ -6,8 +6,7 @@ PortGroup                   xcodeversion 1.0
 
 name                        wine-crossover-games
 conflicts                   wine wine-devel
-version                     9.0.1
-revision                    2
+version                     9.1.0
 categories                  x11
 maintainers                 jeremyhu openmaintainer
 homepage                    http://www.codeweavers.com/
@@ -19,7 +18,7 @@ use_parallel_build          yes
 
 minimum_xcodeversions       {8 2.5}
 
-description                 Wine Is Not an Emulator (1.1.34 with CodeWeavers modifications)
+description                 Wine Is Not an Emulator (1.2 with CodeWeavers modifications)
 
 long_description            Wine is an implementation of the Windows APIs on top of X11. \
                             This version contains the Codeweavers patches for Crossover Games
@@ -27,9 +26,8 @@ long_description            Wine is an implementation of the Windows APIs on top
 master_sites                http://media.codeweavers.com/pub/crossover/source/ \
                             http://media.codeweavers.com/pub/crossover/source/archive/${version}/
 
-checksums                   md5     964f204bf47f022ee7790937c3c35984 \
-                            sha1    d45433f5479eefd39df613a6c58f046ccfbcccbe \
-                            rmd160  a8d8a75f638d3bcd7480661cb530d9e051b341d2
+checksums                   sha1    663217c6c0dfa1f0c3140dfff43fab916ab49dfb \
+                            rmd160  8a1f64c8f8b4e2467fb1b2aeb8c08e962a6d7c69
 
 depends_lib                 port:expat \
                             port:fontconfig \
@@ -83,7 +81,7 @@ depends_build               port:pkgconfig
 # interferes with the wine build (which uses parts of them if present).
 extract.post_args-append    wine
 
-patchfiles                  sl-audio.patch openssl-1.patch
+patchfiles                  sl-audio.patch
 
 configure.ldflags-append    -framework CoreServices \
                             -lz
