--- a/dports/lang/logtalk/Portfile
+++ b/dports/lang/logtalk/Portfile
@@ -2,11 +2,13 @@
 
 PortSystem	1.0
 name		logtalk
-version 	2.40.1
+version 	2.41.0
 
 categories	lang
 maintainers	logtalk.org:pmoura
 platforms	darwin freebsd linux
+supported_archs	noarch
+
 description	Logtalk - Open source object-oriented logic programming language
 
 long_description	\
@@ -19,7 +21,9 @@ long_description	\
 homepage		http://logtalk.org/
 master_sites	${homepage}files/
 
-checksums		md5	18cc69bd1aba380ea6f01f75aac3bc3f
+checksums		md5     6c967d26f394e2d6584978f038ffd8a4 \
+				sha1    8cb811c0a6e0c203b274e96edf74d8e56986bdef \
+				rmd160  bbf614c0450def4164b185b35d0f4b54c397dd0d
 
 distname		lgt[strsed ${version} {g/\.//}]
 
@@ -30,8 +34,6 @@ depends_lib		port:shared-mime-info
 use_configure	no
 
 build			{}
-
-universal_variant	no
 
 destroot {
 	system "cd ${worksrcpath}/scripts && ./install.sh ${destroot}${prefix}"
@@ -56,18 +58,17 @@ post-activate {
 	ui_msg "* the scripts!):"
 	ui_msg "*"
 	ui_msg "* B-Prolog (version 7.4 or later):       bplgt"
-	ui_msg "* Ciao (version 1.10):                   ciaolgt    (first run must use sudo)"
-	ui_msg "* CxProlog (version 0.97.4 or later):    cxlgt"
-	ui_msg "* ECLiPSe (version 6.0 or later):        eclipselgt"
+	ui_msg "* CxProlog (version 0.97.5 or later):    cxlgt"
+	ui_msg "* ECLiPSe (version 6.0#141 or later):     eclipselgt"
 	ui_msg "* GNU Prolog (version 1.4.0 or later):   gplgt"
 	ui_msg "* Qu-Prolog (version 8.11 or later):     qplgt"
 	ui_msg "* SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt"
-	ui_msg "* SWI-Prolog (version 5.6.44 or later):  swilgt"
+	ui_msg "* SWI-Prolog (version 5.8.0 or later):   swilgt"
 	ui_msg "* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)"
 	ui_msg "* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)"
 	ui_msg "* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)"
 	ui_msg "* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)"
-	ui_msg "* YAP (version 5.1.3 or later):          yaplgt"
+	ui_msg "* YAP (version 6.0.2 or later):          yaplgt"
 	ui_msg "*"
 	ui_msg "* Remember to set the environment variable LOGTALKHOME to the path to"
 	ui_msg "* the Logtalk distribution: ${prefix}/share/logtalk"
