soprano: update version to 2.5.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@71554 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/soprano/Portfile
+++ b/dports/devel/soprano/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 PortGroup           kde4    1.0
 
 name                soprano
-version             2.4.4
+version             2.5.2
 categories          devel
 maintainers         nomaintainer
 description         The Qt-based RDF framework.
@@ -14,9 +15,8 @@ platforms           darwin
 homepage            http://soprano.sourceforge.net
 master_sites        sourceforge:soprano
 use_bzip2           yes
-checksums           md5     11a83941f290e8719883df49a4cd8faa \
-                    sha1    5c5dfc694fdba566af67fa6b3bc2e6d8211236ba \
-                    rmd160  05fe6fa3e49e15e23131f7e0f495d7cc350ac87c
+checksums           md5     c5562bae458cad6f5d4f344277a9a48a \
+                    sha1    618a402c5042b3524a0bc64d775cf2454bcb369e
 
 depends_lib-append  port:clucene \
                     port:strigi \
