liboobs: update to version 2.30.1, remove outdated patchfiles.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71555 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/liboobs/Portfile
+++ b/dports/gnome/liboobs/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            liboobs
-version         2.22.2
+version         2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -22,19 +22,17 @@ master_sites    gnome:sources/${name}/${branch}/
 
 use_bzip2       yes
 
-checksums       md5     84d20702942635e3bebc0c1c35bdad43 \
-                sha1    39a54fc11a7384e2d241518a4cdd61798472d77f \
-                rmd160  900aa933c9f8da262de77dc30e6f116679cad07f
-
-patchfiles      patch-oobs-oobs-ifacesconfig.c.diff \
-                patch-oobs-oobs-user.c.diff
+checksums       md5     65abd1254c63aea04fc1879c21e0051d \
+                sha1    f5d995a31fc907add165953c3797b15cbd61da28 \
+                rmd160  87ef170d7a0ee73563ce341bec958ad99f0179c7
 
 post-patch {
     # Crypt functions are in the System library.
     reinplace "s/-lcrypt/-lSystem/" ${worksrcpath}/configure
 
     # Crypt functions are declared in unistd.h system header.
-    reinplace "s/<crypt.h>/<unistd.h>/" ${worksrcpath}/oobs/oobs-group.c
+    reinplace "s/<crypt.h>/<unistd.h>/" ${worksrcpath}/oobs/oobs-group.c \
+                                        ${worksrcpath}/oobs/oobs-user.c
 }
 
 depends_build   port:pkgconfig \
