gnome-netstatus: update to version 2.28.1, dependencies, configuration, not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71557 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-netstatus/Portfile
+++ b/dports/gnome/gnome-netstatus/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-netstatus
-version		2.26.0
+version		2.28.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	The GNOME Network Monitor Applet
 long_description	\
@@ -16,28 +16,26 @@ platforms	darwin
 homepage	http://www.gnome.org/projects/evolution
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     f116157535ec185f0ea7503fafc5edd6 \
-                sha1    53ca180d45a42b011ae6765461ae55c6a69d66af \
-                rmd160  5cf01deb990c503d9691e514cc7bd3ca5d4b00f9
+checksums       md5     8ecc95396c9d1c7d963a7f232ca370f8 \
+                sha1    8fb8384943b038a918ca1a41476412b90047c71a \
+                rmd160  cd01354e2a5ef800717dfcc1ccb07e0035c4977d
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:gnome-doc-utils \
-                port:p5-xml-parser
+                port:gnome-doc-utils
 
-depends_lib	port:gtk2 \
-                port:libglade2 \
-                port:gnome-panel
+depends_lib	port:gnome-panel
 
 use_bzip2 	yes
 
-configure.args	--mandir=${prefix}/share/man \
-		--disable-schemas-install \
+configure.args	--disable-schemas-install \
                 --disable-scrollkeeper
 
-post-destroot	{
-	file delete -force ${destroot}${prefix}/var/scrollkeeper
-}
+#
+# gnome-panel is not universal
+#
+
+universal_variant no
 
 post-activate {
    system "scrollkeeper-update"
