gnome-system-monitor: update to version 2.28.1, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71558 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-system-monitor/Portfile
+++ b/dports/gnome/gnome-system-monitor/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-system-monitor
-version		2.26.2
+version		2.28.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	A system monitor.
 long_description        A nicer, simpler, easier to use replacement to gtop. \
@@ -16,16 +16,16 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     d69ddb569e51ba381b6bf2d8d32f3b78 \
-                sha1    a24d042ac3eefc77970a2ebdf56a94d77df96e34 \
-                rmd160  31cc3c0e531275254bf9ba33cb94ad5258ea936c
+checksums       md5     064cf1a97d3dd1946bc3e55d8272c2c8 \
+                sha1    a3e040e5a646b7595312a637b98558ca8212f0b2 \
+                rmd160  aef99e0887b795c446c70d06b994acad3f5ea098
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils
 
-depends_lib	port:libgtop \
+depends_lib	port:gconf \
+                port:libgtop \
 	        port:libwnck \
 	        port:gnome-icon-theme \
 	        port:gtkmm \
