--- a/dports/gnome/gnome-terminal/Portfile
+++ b/dports/gnome/gnome-terminal/Portfile
@@ -4,36 +4,37 @@
 PortSystem  1.0
 
 name		gnome-terminal
-version		2.26.3.1
-revision    1
+version		2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Terminal component for the GNOME 2 Desktop
-long_description        Terminal component for the GNOME 2 Desktop
+long_description \
+                ${description}
 maintainers	devans openmaintainer
 categories	gnome
 platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     b6c6c0f5f3e061da7e56f3a04385bb7b \
-                sha1    68dc9739b4d35c0647596b1773c5da76782f1164 \
-                rmd160  db6b5ba601c3c74e3424e88119501b9414e1f37d
+checksums       md5     74c4528f00067072c2bd867d1f8fe844 \
+                sha1    ab97acd3d70bdcc468975a49b23ebb05f6e9bc49 \
+                rmd160  cabf51649dafa6ccf0bbf2903fa081315d7e2933
 
 depends_lib     port:gconf \
-	        port:startup-notification \
-	        port:vte
-depends_run     port:libgnome
+	        port:vte \
+                port:xorg-libsm
 
 use_bzip2 	yes
-
-patchfiles      patch-src-terminal.c.diff
-
-configure.python ${prefix}/bin/python2.5
 
 configure.args \
 	--mandir=${prefix}/share/man \
 	--disable-schemas-install \
         --disable-scrollkeeper
+
+#
+# vte is not universal
+#
+
+universal_variant no
 
 post-activate	{
 	system "${prefix}/bin/scrollkeeper-update"
