gnome-user-docs: update to version 2.30.1, dependencies, noarch.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71560 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-user-docs/Portfile
+++ b/dports/gnome/gnome-user-docs/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-user-docs
-version		2.26.2
+version		2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	End-user documentation for GNOME2
 long_description        This package contains documents which will be \
@@ -14,13 +14,16 @@ long_description        This package contains documents which will be \
 maintainers	nomaintainer
 categories	gnome
 platforms	darwin
+supported_archs noarch
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
-checksums       md5     b259de6dcb6a0421fcb28a66e3d20da1 \
-                sha1    95c66b850e52300f4ed0d3769e0b04cb91d21c31 \
-                rmd160  ee43875a78186d21031079efd9f9fa7beff373c5
-depends_lib	port:rarian
+
+checksums       md5     eccd6a238a499ba42dbb6d74b02dd25a \
+                sha1    431f90b59c4b74fd0f2ebc8a6661bc9fe4f571cb \
+                rmd160  12b4a6690b96cc5fa13a5e06a28a26cef534b354
+
 depends_build	port:gnome-doc-utils
+
 use_bzip2 	yes
 configure.args	--disable-scrollkeeper
 
