gnome-utils: update to version 2.30.0, dependencies, configuration, not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71561 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-utils/Portfile
+++ b/dports/gnome/gnome-utils/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-utils
-version		2.26.0
+version		2.30.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GNOME utilities
 long_description Utilities for the GNOME 2.0 desktop.
@@ -14,30 +14,41 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     667400cfb9bee954028024ac3cf91a09 \
-                sha1    ac1078ad2d75a561f7aa562d06316a221d6dcbc4 \
-                rmd160  7ef1bc0d7a497135426fa79505726b50acb75547
+checksums       md5     c6d779ddccf99cbe0667b578078dd011 \
+                sha1    107f60f499340bb5c02e92db645836f6187b4c37 \
+                rmd160  952102bb1751819a22d468309958234f00b2733b
 
-depends_lib     port:libgnomeui \
+depends_build   port:pkgconfig \
+                port:intltool \
+                port:gnome-doc-utils \
+                port:gtk-doc
+
+depends_lib     port:gconf \
                 port:libgtop \
-                port:gnome-desktop \
                 port:gnome-panel
 
 use_bzip2 	yes
 
-configure.args  --mandir=${prefix}/share/man \
-		--x-includes=${prefix}/include \
+configure.args  --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
-                --disable-hal \
-                --enable-gfloppy=no \
-                --disable-scrollkeeper
+                --disable-scrollkeeper \
+                --disable-schemas-install
 
 post-extract {
-	reinplace "s|-export-dynamic||g" ${worksrcpath}/gnome-screenshot/Makefile.in
+	reinplace "s|-export-dynamic||g" ${worksrcpath}/gnome-dictionary/libgdict/Makefile.in \
+                                         ${worksrcpath}/baobab/src/Makefile.in
 }
+
+#
+# gnome-panel is not universal
+#
+
+universal_variant no
 
 post-activate	{
 	system "scrollkeeper-update"
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+            gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
