vino: update to version 2.28.2, dependencies, configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71562 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/vino/Portfile
+++ b/dports/gnome/vino/Portfile
@@ -4,8 +4,7 @@
 PortSystem	1.0
 
 name		vino
-version         2.26.2
-revision        1
+version         2.28.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 homepage	http://www.gnome.org
 description	Vino is a VNC server for the current GNOME user
@@ -15,30 +14,30 @@ platforms	darwin
 maintainers	devans openmaintainer
 master_sites	gnome:sources/${name}/${branch}/
 
-checksums       md5     580a8f79130273f03cb57c32bba59120 \
-                sha1    8e5c7bbe9900e954ed3096743ffba4e7640be508 \
-                rmd160  ab6c3a0f3e677f7b3fa4c0956e2246870a84077f
+checksums       md5     7b7fcd23925efb628da2d2f12d73b485 \
+                sha1    7d6863956356475b8784cdd2017bfbbd0e0ce15e \
+                rmd160  541006f8fac7b951bfc236869e52a3b1c02e1ed1
 
 use_bzip2	yes
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils \
                 port:gtk-doc
 
 depends_lib     port:gconf \
-                port:libgnomeui \
+                port:gnutls \
                 port:libsoup \
-                port:libglade2 \
                 port:libgnome-keyring \
                 port:libnotify \
-                port:gnutls \
                 port:libgcrypt \
-                port:libunique
+                port:libunique \
+                port:telepathy-glib \
+                port:xorg-libXtst
 
 
-configure.args	mandir=${prefix}/share/man \
+configure.args	--x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib \
                 --disable-schemas-install \
                 --disable-network-manager \
                 --disable-avahi \
