sphinx4: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71563 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sphinx4/Portfile
+++ b/dports/audio/sphinx4/Portfile
@@ -37,3 +37,7 @@ destroot    {
     # copy in the rest
     file copy ${worksrcpath} ${destroot}${prefix}/share/java/${name}
 }
+
+livecheck.type  regex
+livecheck.url   http://sourceforge.net/projects/cmusphinx/files
+livecheck.regex /${name}-(\[0-9a-z.\]+)-src${extract.suffix}
