sphinxbase: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71565 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sphinxbase/Portfile
+++ b/dports/audio/sphinxbase/Portfile
@@ -12,7 +12,7 @@ long_description \
 maintainers         singingwolfboy openmaintainer
 categories          audio
 platforms           darwin freebsd
-homepage            http://www.speech.cs.cmu.edu/sphinx/
+homepage            http://cmusphinx.sourceforge.net/
 master_sites        sourceforge:cmusphinx
 checksums           md5     5f89950966525b5f69a6ab36b3b817dd \
                     sha1    892d6785e298484d15d8873e1baf222364fea348 \
