--- a/dports/audio/sphinxbase/Portfile
+++ b/dports/audio/sphinxbase/Portfile
@@ -37,3 +37,7 @@ post-destroot {
     xinstall -d -m 755 ${destroot}${prefix}/share/doc/
     file copy ${worksrcpath}/doc ${destroot}${prefix}/share/doc/${name}
 }
+
+livecheck.type  regex
+livecheck.url   http://sourceforge.net/projects/cmusphinx/files
+livecheck.regex /${name}-(\[0-9.\]+)${extract.suffix}
