--- a/dports/audio/sphinxbase/files/Makefile.in.diff
+++ b/dports/audio/sphinxbase/files/Makefile.in.diff
@@ -1,11 +1,11 @@
---- python/Makefile.in.orig	2010-03-26 10:58:31.000000000 -0400
-+++ python/Makefile.in	2010-03-26 10:57:54.000000000 -0400
-@@ -471,7 +471,7 @@
+--- python/Makefile.in.orig	2010-09-03 18:41:16.000000000 -0500
++++ python/Makefile.in	2010-09-16 17:23:24.000000000 -0500
+@@ -479,7 +479,7 @@
  @BUILD_PYTHON_TRUE@all-local: pymod-build-stamp
  
  @BUILD_PYTHON_TRUE@install-exec-local: pymod-build-stamp
--@BUILD_PYTHON_TRUE@	$(PYTHON) setup.py install --prefix $(DESTDIR)$(prefix)
-+@BUILD_PYTHON_TRUE@	$(PYTHON) setup.py install --prefix @@PY_PREFIX@@ --root $(DESTDIR)
+-@BUILD_PYTHON_TRUE@	$(PYTHON) setup.py install --prefix $(DESTDIR)$(prefix) $(SETUPTOOLS_CRAP)
++@BUILD_PYTHON_TRUE@	$(PYTHON) setup.py install --prefix @@PY_PREFIX@@ --root $(DESTDIR) $(SETUPTOOLS_CRAP)
  
  @BUILD_PYTHON_TRUE@uninstall-local:
  @BUILD_PYTHON_TRUE@	$(PYTHON) setup.py bogus_uninstall --prefix $(DESTDIR)$(prefix)
