sphinxtrain: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71568 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sphinxtrain/Portfile
+++ b/dports/audio/sphinxtrain/Portfile
@@ -12,7 +12,7 @@ long_description    \
 maintainers         singingwolfboy openmaintainer
 categories          audio
 platforms           darwin freebsd
-homepage            http://www.speech.cs.cmu.edu/sphinx/
+homepage            http://cmusphinx.sourceforge.net/
 master_sites        sourceforge:cmusphinx
 master_sites.mirror_subdir  /${real_name}/${version}
 distname            ${real_name}-${version}
