sphinxtrain: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71569 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sphinxtrain/Portfile
+++ b/dports/audio/sphinxtrain/Portfile
@@ -46,3 +46,7 @@ destroot {
     
     move ${worksrcpath}/scripts_pl ${destroot}${prefix}/share/${name}
 }
+
+livecheck.type  regex
+livecheck.url   http://sourceforge.net/projects/cmusphinx/files
+livecheck.regex /${real_name}-(\[0-9.\]+)${extract.suffix}
