sphinx3: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71570 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sphinx3/Portfile
+++ b/dports/audio/sphinx3/Portfile
@@ -11,7 +11,7 @@ long_description	Sphinx-3 is CMU's state-of-the-art large vocabulary \
 maintainers	singingwolfboy openmaintainer
 categories	audio
 platforms	darwin freebsd
-homepage	http://www.speech.cs.cmu.edu/sphinx/
+homepage	http://cmusphinx.sourceforge.net/
 master_sites     sourceforge:cmusphinx
 
 use_bzip2   yes
