--- a/dports/audio/sphinx3/Portfile
+++ b/dports/audio/sphinx3/Portfile
@@ -44,3 +44,7 @@ post-destroot {
     system "find ${worksrcpath}/doc -name .svn -print0 | xargs -0 rm -rf"
     file copy ${worksrcpath}/doc ${destroot}${prefix}/share/doc/${name}
 }
+
+livecheck.type  regex
+livecheck.url   http://sourceforge.net/projects/cmusphinx/files
+livecheck.regex /${name}-(\[0-9.\]+)${extract.suffix}
