sphinx4 is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@71572 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sphinx4/Portfile
+++ b/dports/audio/sphinx4/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 name            sphinx4
 version         1.0beta5
+revision        1
 description     Speech recognition package
 long_description \
                 ${description}
@@ -14,6 +15,7 @@ distname        ${name}-${version}-src
 worksrcdir      ${name}-${version}
 master_sites    sourceforge:cmusphinx
 use_zip         yes
+supported_archs noarch
 checksums       md5     68ebf4701893247043559a3a8ebff277 \
                 sha1    6f68bddb81a2472ce01c26ada301690f8ad6acae \
                 rmd160  56894d6112a1ed2fa7923059296a2ea6b5fdd419
