--- a/dports/gnome/gnome-games/Portfile
+++ b/dports/gnome/gnome-games/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-games
-version		2.26.3
+version		2.30.2
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	Collection of small but addictive games for GNOME
 long_description    ${description}
@@ -14,35 +14,40 @@ platforms	darwin
 homepage        http://live.gnome.org/GnomeGames/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     32c69a25671d8d23b19f234efcc177ca \
-                sha1    0b859be03e6f25a43ed4ad41d6022b9bc83635fc \
-                rmd160  54ae263d943e2cf7dad2f1e160d7a2756e0ca573
+checksums       md5     1fc03fe2209aa8a70da8f25d6eae1735 \
+                sha1    3541ccc991af82603fc3067863bc27a731302b2c \
+                rmd160  12c7e5ba3b4a9aca5d9918978e437e774ac0752b
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils \
                 port:gtk-doc
 
 depends_lib     port:gconf \
                 port:librsvg \
-                port:py25-gtk \
-                port:gnome-python-desktop \
-                port:libsdl_mixer \
-                port:ggz-client-libs \
+                port:clutter-gtk \
+                port:py26-gtk \
+                port:libcanberra \
+                port:xorg-libsm \
                 port:guile
               
 use_bzip2 	yes
 
-configure.python ${prefix}/bin/python2.5
+patchfiles      patch-configure.diff
+
+configure.python ${prefix}/bin/python2.6
+set python_prefix ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_prefix}/lib/pkgconfig
 
 configure.args  --disable-scrollkeeper \
                 --disable-schemas-install \
-                --disable-tests
+                --disable-tests \
+                --disable-silent-rules \
+                --disable-introspection
 
-post-extract {
-    reinplace "s|/usr/bin/env python|${prefix}/bin/python2.5|" ${worksrcpath}/glchess/src/glchess.in.in
-    reinplace "s|/usr/bin/env python|${prefix}/bin/python2.5|" ${worksrcpath}/gnome-sudoku/src/gnome-sudoku.in.in
+post-patch {
+    reinplace "s|/usr/bin/env python|${configure.python}|" ${worksrcpath}/glchess/src/glchess.in.in
+    reinplace "s|/usr/bin/env python|${configure.python}|" ${worksrcpath}/gnome-sudoku/src/gnome-sudoku.in.in
 }
 
 post-activate {
