--- a/dports/lang/swi-prolog-devel/Portfile
+++ b/dports/lang/swi-prolog-devel/Portfile
@@ -6,8 +6,7 @@ PortSystem	1.0
 name		swi-prolog-devel
 conflicts	swi-prolog swi-prolog-lite
 epoch		20051223
-version		5.9.7
-revision        1
+version		5.11.5
 
 categories	lang
 maintainers	uva.nl:J.Wielemaker logtalk.org:pmoura
@@ -31,9 +30,9 @@ master_sites	http://www.swi-prolog.org/download/devel/src/
 dist_subdir	swi-prolog
 
 checksums       \
-	md5     ccd5594e0500b5c4d63bad1e4449d119 \
-	sha1    50d163bb2a24f83d1ee7811434f31266e2aaf44e \
-	rmd160  720637581faa4c3bf1a96340956ec220de845db0
+	md5     8a5b661a5bf2c018b526b915e8fa192d \
+	sha1    708a7b2a6a7d3d8a9ff19944d4b1891c039c8ae5 \
+	rmd160  7109e2be86adc764358cb0b6bd2330952816449d
 
 depends_build   \
 	port:gawk	\
@@ -42,6 +41,7 @@ depends_build   \
 depends_lib		\
 	port:readline		\
 	port:ncurses		\
+	port:ncursesw		\
 	port:jpeg		\
 	port:libmcrypt		\
 	port:gmp		\
